Add screen list

--- a/infoscreen/static/infoscreen/scss/custom_bootstrap.scss
+++ b/infoscreen/static/infoscreen/scss/custom_bootstrap.scss
@@ -10,6 +10,9 @@
     height: 100vh !important;
 }
 
+.object-fit-cover {
+    object-fit: cover !important;
+}
 
 .row, [class^="col"] {
     margin: 0;
