--- a/infoscreen/static/infoscreen/scss/base.scss
+++ b/infoscreen/static/infoscreen/scss/base.scss
@@ -1,5 +1,10 @@
 @import "colors.scss";
 @import "custom_bootstrap.scss";
 
-$font: black;
-$bg: $light;
+$font: $darke;
+$bg: $dark4;
+
+body {
+    background-color: $bg;
+    color: $font;
+}
