--- a/staticroot/infoscreen/scss/base.scss
+++ b/staticroot/infoscreen/scss/base.scss
@@ -1,5 +1,10 @@
 @import "colors.scss";
 @import "custom_bootstrap.scss";
 
-$font: black;
-$bg: $light;
+$font: $darkd;
+$bg: $dark4;
+
+body {
+    background-color: $bg;
+    font: $font;
+}
