--- a/infoscreen/templates/infoscreen/screen.html
+++ b/infoscreen/templates/infoscreen/screen.html
@@ -11,10 +11,16 @@
 
 {% block body %}
 <div class="body-inner">
-    
-    <div class="vw-100 vh-100 border border-dark">
-        <img class="h-100 w-100 object-fit-cover" src="{{ screen.images.first.url }}" alt="{{ screen.images.first.name }}">
-    </div>
+    {% if screen.images.first %}
+        <div class="vw-100 vh-100 border border-dark">
+            <img class="h-100 w-100 object-fit-cover" src="{{ screen.images.first.url }}" alt="{{ screen.images.first.name }}">
+        </div>
+    {% else %}
+            <div>
+                <iframe width="100%" height="720px" allowfullscreen frameBorder="0" src="https://www.youtube.com/embed/{{screen.videos.first.youtube_code}}?autoplay=1&playlist={{screen.videos.first.youtube_code}}&loop=1&controls=0" />
+
+            </div>
+    {% endif %}
     
 </div>
 {% endblock %}
