--- a/staticroot/infoscreen/scss/base.scss
+++ b/staticroot/infoscreen/scss/base.scss
@@ -1,10 +1,10 @@
 @import "colors.scss";
 @import "custom_bootstrap.scss";
 
-$font: $darkd;
+$font: $darke;
 $bg: $dark4;
 
 body {
     background-color: $bg;
-    font: $font;
+    color: $font;
 }
