--- a/infoscreen/templates/infoscreen/screen_list.html
+++ b/infoscreen/templates/infoscreen/screen_list.html
@@ -21,7 +21,7 @@
                         {% if screen.images.first %}
                             <img src= "{{ screen.images.first.url }}" class="img-fluid mb-2" width="90%"/>
                         {% elif screen.videos.first.youtube_code %}
-                            <iframe src="//www.youtube.com/embed/{{ screen.videos.first.youtube_code }}"></iframe>
+                            <iframe src="//www.youtube.com/embed/{{ screen.videos.first.youtube_code }}" width="90%"></iframe>
                         {% else %}
                             <img class="img-fluid mb-2" src='{% static "infoscreen/img/default.jpg" %}' width="90%"/>
                         {% endif %}
