--- a/infoscreen/templates/infoscreen/components/screen.html
+++ b/infoscreen/templates/infoscreen/components/screen.html
@@ -1,5 +1,14 @@
+{% load static %}
+
 <div class="">
     <a href="{% url 'infoscreen:view_screen' screen.slug %}" class="{{ classes }}">
-        {{ screen.name }}
+        <h3>{{ screen.name }}</h3>
+        {% if screen.images.first %}
+            <img src= "{{ screen.images.first.url }}" class="img-fluid mb-2" width="90%"/>
+        {% elif screen.videos.first.youtube_code %}
+            <iframe src="//www.youtube.com/embed/{{ screen.videos.first.youtube_code }}" width="90%"></iframe>
+        {% else %}
+            <img class="img-fluid mb-2" src='{% static "infoscreen/img/default.jpg" %}' width="90%"/>
+        {% endif %}
     </a>
 </div>
