Include navbar and footer correctly

--- a/infoscreen/templates/infoscreen/base.html
+++ b/infoscreen/templates/infoscreen/base.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 {% load compress %}
-{% load infoscreen_tags %}
+
 
 <html lang="en" dir="ltr">
 <head>
@@ -47,10 +47,9 @@
     {% endblock %}
 </head>
 <body>
-    {% comment %} {% block navbar %} {% endcomment %}
-        {% navbar_component %}
-    {% comment %} {% endblock %} {% endcomment %}
-
+    {% block navbar %}
+        {% include "infoscreen/components/navbar.html" %}
+    {% endblock %}
 
     <div class="body-outer container-fluid m-0 p-0">
         {% block body %}
@@ -59,17 +58,8 @@
     </div>
 
     {% block footer %}
-       <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-          <p class="col-md-4 mb-0 text-muted">© Studentersamfundet i Trondhjem 2022</p>
-
-          <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          </a>
-        </footer>
-      </div>
+        {% include "infoscreen/components/footer.html" %}
     {% endblock %}
-
 
     <!-- Begin: scripts -->
     <!-- NOTE: Scripts and plugins are imported last because of better user experience -->
