--- a/infoscreen/templates/infoscreen/screen_list.html
+++ b/infoscreen/templates/infoscreen/screen_list.html
@@ -9,6 +9,9 @@
     <style>
     </style>
 {% endblock %}
+{% block navbar %}
+    {% include "infoscreen/components/navbar.html" %}
+{% endblock %}
 
 {% block body %}
 <div class="body-inner">
@@ -21,5 +24,9 @@
         {% endfor %}
     </div>
 </div>
+{% endblock %}
+
+{% block footer %}
+    {% include "infoscreen/components/footer.html" %}
 {% endblock %}
 
