--- a/infoscreen/templates/infoscreen/screen.html
+++ b/infoscreen/templates/infoscreen/screen.html
@@ -23,18 +23,18 @@
         <div class="carousel-inner">
             {% for image in screen.images.all %}
                 <div class="carousel-item {% if forloop.first %} active {% endif %}">
-                    <img class="d-block w-100" src="{{image.url}}" alt="Image">
+                    <img style="aspect-ratio: 16 / 9" src="{{image.url}}" alt="Image">
                 </div>
             {% endfor %}
             </div>
       </div>
     {% elif screen.images.first %}
         <div class="vw-100 vh-100 border border-dark">
-            <img class="h-100 w-100 object-fit-cover" src="{{ screen.images.first.url }}" alt="{{ screen.images.first.name }}">
+            <img style="aspect-ratio: 16 / 9" src="{{ screen.images.first.url }}" alt="{{ screen.images.first.name }}">
         </div>
     {% else %}
             <div class="youtube-video">
-                <iframe frameBorder="0" src="https://www.youtube.com/embed/{{screen.videos.first.youtube_code}}?autoplay=1&playlist={{screen.videos.first.youtube_code}}&loop=1&controls=0" />
+                <iframe frameBorder="0" src="https://www.youtube.com/embed/{{screen.videos.first.youtube_code}}?autoplay=1&playlist={{screen.videos.first.youtube_code}}&loop=1&controls=0" style="aspect-ratio: 16 / 9" />
             </div>
     {% endif %}
 
